add profile and more API doc
